k8s/shopping-cart-solution/istio/traffic/dr/back-office-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: back-office-dr
spec:
  host: back-office
  subsets:
    - name: v1
      labels:
        version: v1
