k8s/shopping-cart-solution/istio/traffic/dr/crm-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: crm-dr
spec:
  host: crm
  subsets:
    - name: v1
      labels:
        version: v1
