k8s/shopping-cart-solution/istio/traffic/dr/customer-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: customer-dr
spec:
  host: customer
  subsets:
    - name: v1
      labels:
        version: v1
