k8s/shopping-cart-solution/istio/traffic/dr/inventory-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: inventory-dr
spec:
  host: inventory
  subsets:
    - name: v1
      labels:
        version: v1
