k8s/shopping-cart-solution/istio/traffic/dr/location-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: location-dr
spec:
  host: location
  subsets:
    - name: v1
      labels:
        version: v1
