k8s/shopping-cart-solution/istio/traffic/dr/order-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: order-dr
spec:
  host: order
  subsets:
    - name: v1
      labels:
        version: v1
