k8s/shopping-cart-solution/istio/traffic/dr/shopping-cart-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: shopping-cart-dr
spec:
  host: shopping-cart
  subsets:
    - name: v1
      labels:
        version: v1
