k8s/shopping-cart-solution/istio/traffic/dr/user-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: user-dr
spec:
  host: user
  subsets:
    - name: v1
      labels:
        version: v1
